Fixed header z-index bug

--- a/client/styles/Sidebar.module.scss
+++ b/client/styles/Sidebar.module.scss
@@ -1,5 +1,5 @@
 .icon {
-    z-index: 9997;
+    z-index: 9999;
     position: relative;
     background-color: transparent;
     border: 0;
@@ -23,7 +23,7 @@
     left: 0;
     right: 0;
     background: rgba(0, 0, 0, 0.5);
-    z-index: 9999;
+    z-index: 9995;
     overflow-y: scroll;
     cursor: pointer;
     height: 100vh;
